data/all_generated_tests/raw_wast_tests/call_IncorrectBranchTargetResolution_3189.wast
;; 8. **Test Handling Traps with Function Calls**:    - **Description**: Invoke a `call` instruction that is designed to trap (e.g., invalid memory access).    - **Constraint**: Confirms that traps are properly captured and navigated.    - **Relation to Incorrect Branch Target Resolution**: Unhandled traps could result in unintended branch jumps post-recovery or incorrect function invocation.

(assert_invalid
  (module
    (func $invoke-trap (call 1 (i32.const 42)))
    (func $trap-func (param i32) (local i32) (i32.load (local.get 0)))
  )
  "out of bounds memory access"
)